<resources>
    <string name="app_name">黔宝商城</string>
    <string name="main_buttom_home">首页</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_buttom_fujin">附近</string>
    <string name="main_buttom_my">我的</string>
    <string name="main_buttom_techan">特产</string>
    <string name="beijing">城市</string>
    <string name="my">我的</string>
    <string name="tiantianmeiwei">天天美味</string>
    <string name="gengduomeiwei">更多美味</string>
    <string name="shuqiyuefang">暑期约饭\n5折更便宜\n限量</string>
    <string name="songtianpin">送甜品啦\n人人有份</string>
    <string name="meishi">美食</string>
    <string name="wubaim">000m</string>
    <string name="daijinquan">000元代金卷只限自提</string>
    <string name="jiage">￥00.0   新客户专享   103</string>
    <string name="fenlei">分类</string>
    <string name="tuijian">00人消费</string>
    <string name="mianfei">黔宝商城！免费wifi</string>
    <string name="m"><![CDATA[<000m]]></string>
    <string name="jiudain">酒店</string>
    <string name="ktv">KTV</string>
    <string name="yule">娱乐</string>
    <string name="wodedingdan">\t我的订单</string>
    <string name="chakanquanbudingdan">查看全部订单</string>
    <string name="daifukuan">待付款</string>
    <string name="daishiyong">待使用</string>
    <string name="daipingjia">待评价</string>
    <string name="tuikuan">退款/售后</string>
    <string name="wodeyue">\t我的余额</string>
    <string name="yuohuiquan">\t优惠券</string>
    <string name="ruzhushangjia">\t入驻商家</string>
    <string name="kefuzhongxin">\t客服中心</string>
    <string name="guanyuqianbao">\t关于黔宝</string>
    <string name="qingdianji">请点击登录</string>
    <string name="pingjia">评价</string>
    <string name="shoucang">我的收藏</string>
    <string name="quanbufeilei">全部分类</string>
    <string name="quancheng">全城</string>
    <string name="zhinengpaixu">智能排序</string>
    <string name="shaixuan">筛选</string>
    <string name="xianshi">限时</string>
    <string name="chaozhizhekoucai">超值折扣菜\n劲爆折扣专区\n精品美食</string>
    <string name="quanrizhi">全日制</string>
    <string name="zhoudianfang">钟点房</string>
    <string name="mudidi">目的地:</string>
    <string name="shijian">时间</string>
    <string name="sousuo">搜索：</string>
    <string name="sousuo1">搜索</string>
    <string name="xingjijiage">星级价格：\t\t\t\t不限价格\t\t不限星级</string>
    <string name="chazhaojiudian">查找酒店</string>
    <string name="kuaisutuijian">快速推荐</string>
    <string name="pingzhichuyou">品质出游</string>
    <string name="qinglvzhuanxiang">情侣专享</string>
    <string name="kezhanqinglv">客栈青旅</string>
    <string name="moumoujiudian">xxxxxxxxx连锁酒店</string>
    <string name="title_activity_scrolling">黔宝商城</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="gengduo">更多</string>
    <string name="fujintuijainshanjia">附近推荐商家</string>
    <string name="zuliao">足疗</string>
    <string name="hanzheng">汗蒸</string>
    <string name="jiubei">酒吧</string>
    <string name="mishitaotuo">密室逃脱</string>
    <string name="dianwan">电玩</string>
    <string name="dianying">电影</string>
    <string name="jianshen">健身</string>
    <string name="mishi">密室</string>
    <string name="shougong">手工</string>
    <string name="wenquanxiyu">温泉洗浴</string>
    <string name="biaoba">更多分类</string>
    <string name="zuixin">最新</string>
    <string name="shuaixuan">筛选</string>
    <string name="qingshuruzhanghao">输入账号/手机号码</string>
    <string name="shurumima">输入密码</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登陆</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="register">注册</string>
    <string name="pingjialiebiao">评价列表</string>
    <string name="lijigoumai">立即购买</string>
    <string name="tuwenxiangqing">图文详情</string>
    <string name="shangpingxiangqing">商品详情</string>
    <string name="jinruidianpu">进入店铺</string>
    <string name="dianpumingcheng">\t店铺名称</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="bianji">编辑</string>
    <string name="shoucangshop">收藏商品</string>
    <string name="shoucangstor">收藏店铺</string>
    <string name="mydingdan">我的订单</string>
    <string name="quabu">全部</string>
    <string name="daizhifu">待支付</string>
    <string name="jinxingzhong">进行中</string>
    <string name="yiwancheng">已完成</string>
    <string name="dingpumingcheng">\t店铺名称</string>
    <string name="daihzifu">待支付</string>
    <string name="chongzhi">充值</string>
    <string name="tixian">提现</string>
    <string name="zhanghumingxi">\t账户明细</string>
    <string name="myyue">我的余额</string>
    <string name="youhuiquan">优惠券</string>
    <string name="weishiyong">未使用</string>
    <string name="yiguoqi">已过期</string>
    <string name="kefudianhua">客服电话</string>
    <string name="title_activity_food_out_info">FoodOutInfoActivity</string>
    <string name="diancai">点菜</string>
    <string name="xiangqing">详情</string>
    <string name="yishiyong">已使用</string>
    <string name="daifahuo">待发货</string>
    <string name="querenshouhuo">确认收货</string>
    <string name="qingqiushibai">请求失败</string>
    <string name="huoqushouyefenleishibai">获取首页分类失败</string>
    <string name="dianneishangpin">店内商品</string>
    <string name="title_activity_activity">ActivityActivity</string>
    <string name="xiugaiyouxiang">修改头像</string>
    <string name="xiugainicheng">修改昵称</string>
    <string name="qingshurunicheng">请输入昵称</string>
    <string name="xiugaishengri">修改生日</string>
    <string name="xiugaiaddress">修改地址</string>
    <string name="jinrudizhi">进入地址管理界面</string>
    <string name="shezhijieain">设置界面</string>
    <string name="tuichudenglu">切换账号</string>
    <string name="xuanzefangshi">选择方式</string>
    <string name="paizhao">拍照</string>
    <string name="xiangcexuanze">相册</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="xlistview_header_hint_failt">刷新失败</string>
    <string name="ok">确定</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="xinjiandizhi">新建地址</string>
    <string name="shouhuodizhi">收货地址</string>
    <string name="xingming">姓名\t\t</string>
    <string name="zuishaoliangge">最少两个，最多10个</string>
    <string name="bushaoyuqiwei">不少于7位</string>
    <string name="dianhua">电话\t\t</string>
    <string name="sengfenchengshixianqu">省份\t\t城市\t\t县区</string>
    <string name="diqu">地区\t\t</string>
    <string name="dizhi">地址\t\t</string>
    <string name="adressssss">最少5个，最多50个</string>
    <string name="shangchu">删除</string>
    <string name="moren">默认</string>
    <string name="jiahao">+</string>
    <string name="jian">—</string>
    <string name="cart">购物车</string>
    <string name="clearcart">清空购物车</string>
    <string name="qingxuaneshouhuopdizhi">\t\t请选择收货地址</string>
    <string name="zhifufanshi">支付方式</string>
    <string name="zaixianzhifu">在线支付</string>
    <string name="tijiaodingdan">提交</string>
    <string name="pinglunlist">评论列表</string>
    <string name="pingfen">评分</string>
    <string name="qiaocha">较差</string>
    <string name="pingjiacontent">请输入您的评价内容</string>
    <string name="tijiao">提交</string>
    <string name="title_activity_cook_storinfo">CookStorinfoActivity</string>
    <string name="tangshitaocan">堂食套餐</string>
    <string name="yonghupingjia">用户评价</string>
    <string name="zonghepingfen">综合评分</string>
    <string name="xiaoji">小计</string>
    <string name="shiyongyouhuiquan">使用优惠券</string>
    <string name="zongjia">总价</string>
    <string name="shuliang">数量</string>
    <string name="tijiaodingdao">提交订单</string>
    <string name="beizhuliuyan">备注留言</string>
    <string name="beizhu">您可以添加备注信息(限制50个字符)</string>
    <string name="dingdanqueren">订单确认!</string>
    <string name="xuanzeshijian">选择时间段</string>
    <string name="xuanzejiage">选择价格浮动</string>
    <string name="buxian">不限</string>
    <string name="shuruguanjianzi">输入关键字</string>
    <string name="qingshuruguanjianzi">最多输入5个汉字</string>
    <string name="quxiao">取消</string>
    <string name="monidaohang">模拟导航</string>
    <string name="wodeweizhi">我的位置</string>
    <string name="kaishidaohang">开始导航</string>
    <string name="jiudianxiangqing">酒店详情</string>
    <string name="jiudiandianhau">酒店电话</string>
    <string name="yudingfangjian">\t\t预定房间</string>
    <string name="yuyue">预约</string>
    <string name="youshenmwenti">\t\t有什么问题\t\t问问去过的人吧</string>
    <string name="yuding">\t\t预定</string>
    <string name="tuangou">\t\t团购</string>
    <string name="ktvinfo">KTV详情页</string>
    <string name="qingxuanzekaichangshijian">请选择开唱时间</string>
    <string name="xiayibu">下一步,选择套餐</string>
    <string name="title_activity_ktvtuan_gou">KTVTuanGouActivity</string>
    <string name="lijiwianggou">立即抢购</string>
    <string name="chakanpinglun">查看评论</string>
    <string name="taocan">套餐</string>
    <string name="baofangliebiao">包房列表</string>
    <string name="goumaixuzhi">购买须知</string>
    <string name="xuanzechengshi">选择城市</string>
    <string name="meirituijian">每日推荐</string>
    <string name="weixinzhifu">微信支付</string>
    <string name="zhifubaozhifu">支付宝支付</string>
    <string name="qingshuru">请输入关键字</string>
    <string name="tuichu">\t退出</string>
    <string name="quedingyaotui">确定要退出吗</string>
    <string name="fujindianjia">附近店家</string>
    <string name="xiuxiyihui">休息一会没有网络了</string>
    <string name="shuaxin">刷新</string>
    <string name="lijitiyan">黔宝商城欢迎您\t3</string>
    <string name="huodongddingdan">黔宝商城提醒您：店家活动不在选择优惠券，以店家活动为准，请您放心使用！</string>
    <string name="dingdanjine">订单金额</string>
    <string name="zuishaoyibai">最少一百元人民币</string>
    <string name="shurujine">输入金额</string>
    <string name="shuruyinhang">银行卡号</string>
    <string name="bankname">输入银行卡号</string>
    <string name="banknameuser">银行户名</string>
    <string name="bangkusernam">请输入银行账户名</string>
    <string name="huanquyinmhangmingcxheng">获取银行名称</string>
    <string name="tuijianshangjia">推荐商家</string>
    <string name="tuikuanzdingdan">退款中</string>
    <string name="tuikuanzhong">退款中</string>
    <string name="yituikuan">已退款</string>
    <string name="shenqingtuikuan">申请退款</string>
    <string name="ninkeyitianxie">您可以填写退款缘由说明（选填）</string>
    <string name="shuomingyuanyin">说明原因</string>
    <string name="ninkeyitianjiazhaop">您可以添加照片(选填最多一张)</string>
    <string name="shentingtuikuan">申请退款</string>
    <string name="ninkeyishuru">您可以输入退款缘由 ，也可忽略</string>
    <string name="yanzhengma">验证码</string>
    <string name="qqingninjinshenbaoguan">二维码和订单号是您去商家消费的凭证，请您妥善保管，
        请不要保存本地或者传播给他人泄露您的隐私，您在规定时间内到店消费完成后会自动消除二维码，及二维码自动过期。</string>
    <string name="dingdanhao">订单号</string>
    <string name="dianjixianshi">点击显示订单号</string>
    <string name="shehuihuafenxiang">\t社会化分享</string>
    <string name="xuanzenidefenxiangfangshi">选择您的分享方式</string>
</resources>