<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/pading_46"
        android:background="@color/app_color"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp" />

    <TextView
        android:id="@+id/networ_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/xiuxiyihui"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/network_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/networ_tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/pading_20"
        android:background="@color/blue"
        android:gravity="center"
        android:minHeight="@dimen/pading_5"
        android:paddingBottom="@dimen/pading_10"
        android:paddingTop="@dimen/pading_10"
        android:text="@string/shuaxin"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp" />
</RelativeLayout>