<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pading_40"
        android:background="@drawable/yuan_dialog"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pading_30"
        android:paddingLeft="@dimen/pading_30"
        android:paddingRight="@dimen/pading_30">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/pading_10"
            android:text="@string/xuanzefangshi"
            android:textColor="@color/text_color_alp"
            android:textSize="@dimen/text_size_13sp" />

        <TextView
            android:id="@+id/dialog_city_tv0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pading_20"
            android:background="@drawable/yuan_dialog_btn_p"
            android:gravity="center"
            android:padding="@dimen/pading_10"
            android:text="@string/paizhao"
            android:textColor="@color/text_write_color_p"
            android:textSize="@dimen/text_size_13sp" />

        <TextView
            android:id="@+id/dialog_city_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pading_20"
            android:background="@drawable/yuan_dialog_btn_p"
            android:gravity="center"
            android:padding="@dimen/pading_10"
            android:text="@string/xiangcexuanze"
            android:textColor="@color/text_write_color_p"
            android:textSize="@dimen/text_size_13sp" />
    </LinearLayout>

</LinearLayout>